--- a/source/jade/analytics.jade
+++ b/source/jade/analytics.jade
@@ -56,7 +56,7 @@ block append content
 					.comments
 						a(href="#") 51
 					.views 2726
-					.irating.irating_fl
+					.irating.irating_dib
 						ul
 							li.star
 							li.star
