--- a/source/jade/articles.jade
+++ b/source/jade/articles.jade
@@ -70,8 +70,7 @@ block append content
 							.imeta.col-2.col-fix
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 				.item
 					.iprev
 						img(src="img/content/180-135-2.jpg", alt="")
@@ -102,8 +101,7 @@ block append content
 							.imeta.col-2.col-fix
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 				.item
 					.iprev
 						img(src="img/content/180-135-1.jpg", alt="")
@@ -131,8 +129,7 @@ block append content
 							.imeta.col-2.col-fix
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 				.item
 					.iprev
 						img(src="img/content/180-135-2.jpg", alt="")
@@ -163,8 +160,7 @@ block append content
 							.imeta.col-2.col-fix
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 				.item
 					.iprev
 						img(src="img/content/180-135-1.jpg", alt="")
@@ -192,8 +188,7 @@ block append content
 							.imeta.col-2.col-fix
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 				.item
 					.iprev
 						img(src="img/content/180-135-2.jpg", alt="")
@@ -224,8 +219,7 @@ block append content
 							.imeta.col-2.col-fix
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 		//------------------------------------------------
 		.main-right
 			.box-sort-docs.box-right
