--- a/source/jade/docs-item.jade
+++ b/source/jade/docs-item.jade
@@ -18,7 +18,14 @@ block append content
 			.box-doc-item
 				.bmeta
 					.date 19 сентября 2014 года
-					.views 2726
+					.comments
+						a(href="#") 123
+					.date 
+						| Количество комментариев: 
+						a(href="#") 13
+					.date.views 2726
+					.date 
+						| Количество скачиваний: 13
 				.bname
 					h1 Свидетельство о государственной  <br>регистрации программы для ЭВМ
 					p № 2013610190 от 09.01.2013
