--- a/source/jade/equipments-static.jade
+++ b/source/jade/equipments-static.jade
@@ -26,12 +26,11 @@ block append content
 								img(src="img/content/edit-page/1.png", alt="")
 						.articles__item-info
 							.articles__item-date-added Добавлен: 13 октября 2012
-							.articles__item-title #{name}
-							.imeta.articles__item-stats
+							.articles__item-title.mar-bot-10 #{name}
+							.bmeta
 								.comments
 									a(href='#') 51
-								.views
-									a(href='#') 225
+								.views 225
 						ul.admin-box.admin-box_line-padding
 							li.admin-edit.js-edit-link
 							li.admin-delete
