--- a/source/jade/events.jade
+++ b/source/jade/events.jade
@@ -44,8 +44,7 @@ block append content
 							.right.mar-top-20m
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 				.item
 					.iprev
 						img(src="img/content/180-135-2.jpg", alt="")
@@ -67,8 +66,7 @@ block append content
 							.right.mar-top-20m
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 			.box-articles
 				.bname
 					h3 Ближайшие события
@@ -93,8 +91,7 @@ block append content
 							.right.mar-top-20m
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 				.item
 					.iprev
 						img(src="img/content/180-135-2.jpg", alt="")
@@ -116,8 +113,7 @@ block append content
 							.right.mar-top-20m
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 				.item
 					.iprev
 						img(src="img/content/180-135-1.jpg", alt="")
@@ -139,8 +135,7 @@ block append content
 							.right.mar-top-20m
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 				.item
 					.iprev
 						img(src="img/content/180-135-1.jpg", alt="")
@@ -162,8 +157,7 @@ block append content
 							.right.mar-top-20m
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 		//------------------------------------------`------
 		.main-right
 			.box-sort-docs.box-right
