--- a/source/jade/info.jade
+++ b/source/jade/info.jade
@@ -105,8 +105,7 @@ block append content
 							.right
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 				.item
 					.iprev
 						img(src="img/content/180-135-2.jpg", alt="")
@@ -121,8 +120,7 @@ block append content
 							.right
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 				.item
 					.iprev
 						img(src="img/content/180-135-1.jpg", alt="")
@@ -137,8 +135,7 @@ block append content
 							.right
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 				.item
 					.iprev
 						img(src="img/content/180-135-1.jpg", alt="")
@@ -153,8 +150,7 @@ block append content
 							.right
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 		//------------------------------------------------
 		.main-right
 			.box-news.box-right
@@ -217,8 +213,7 @@ block append content
 							.imeta
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 					.item
 						.iprev
 							a(href="#") 
@@ -230,8 +225,7 @@ block append content
 							.imeta
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 					.item
 						.iprev
 							a(href="#") 
@@ -243,8 +237,7 @@ block append content
 							.imeta
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 			//------------------------------------------------
 			.box-right.boxside-sort-cat
 				.bname
