--- a/source/jade/lk-new-public.jade
+++ b/source/jade/lk-new-public.jade
@@ -366,8 +366,7 @@ block append content
 								.right
 									.comments
 										a(href="#") 51
-									.views
-										a(href="#") 225
+									.views 225
 					.clear
 					.all_full
 						a(href="#") Все обсуждения
