--- a/source/jade/lk-new.jade
+++ b/source/jade/lk-new.jade
@@ -463,8 +463,7 @@ block append content
 								.right
 									.comments
 										a(href="#") 51
-									.views
-										a(href="#") 225
+									.views 225
 				.item-adder
 						a(href="#popedit").item-adder--link + Добавить обсуждение
 					.clear
