--- a/source/jade/organizations.jade
+++ b/source/jade/organizations.jade
@@ -71,8 +71,7 @@ block append content
 							.imeta
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 						.l-boxgrey.js-object-con
 							.boxgrey-name.js-show-objects
 								a(href="#").close
