--- a/source/jade/programs.jade
+++ b/source/jade/programs.jade
@@ -59,8 +59,7 @@ block append content
 								.right.mar-top-20m
 									.comments
 										a(href="#") 51
-									.views
-										a(href="#") 225
+									.views 225
 				//---------- ---------- ----------
 				+item("Наименование мероприятия")
 				+item("Наименование мероприятия 2")
