--- a/source/jade/reports-table.jade
+++ b/source/jade/reports-table.jade
@@ -13,13 +13,13 @@ block append content
 							tr
 								td.num #
 								td.cat
-									a(href="#").sort-link.is-active Область <br>применения 
+									a(href="#").sort-link.lines Область <br>применения 
 										span
 								td.name
-									a(href="#").sort-link Наименование
+									a(href="#").sort-link.is-active Наименование
 										span
 								td.date
-									a(href="#").sort-link Дата обновления
+									a(href="#").sort-link.is-active.is-sort Дата обновления
 										span
 						tbody
 							tr
@@ -48,7 +48,7 @@ block append content
 							tr
 								td.num #
 								td.cat
-									a(href="#").sort-link.is-active Область <br>применения 
+									a(href="#").sort-link.lines.is-active Область <br>применения 
 										span
 								td.name
 									a(href="#").sort-link Наименование
