--- a/source/jade/requirements.jade
+++ b/source/jade/requirements.jade
@@ -64,8 +64,7 @@ block append content
 									.right
 										.comments
 											a(href="#") 51
-										.views
-											a(href="#") 225	
+										.views 225
 
 					.tabs-content.js-tabs-content(data-id="#js-tab-service")
 						+item("Комплекс по переработки растительного сырья")
