--- a/source/jade/results.jade
+++ b/source/jade/results.jade
@@ -72,8 +72,7 @@ block append content
 								.right.mar-top-20m
 									.comments
 										a(href="#") 51
-									.views
-										a(href="#") 225
+									.views 225
 				+item()
 				+item()
 				+item()
