--- a/source/jade/services.jade
+++ b/source/jade/services.jade
@@ -68,8 +68,7 @@ block append content
 							.right.mar-top-20m
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 				.item
 					.iprev
 						img(src="img/content/180-135-4.jpg", alt="")
@@ -104,8 +103,7 @@ block append content
 							.right.mar-top-20m
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 		//------------------------------------------------
 		.main-right
 			.box-right.boxside-sort-cat
