--- a/source/jade/soft.jade
+++ b/source/jade/soft.jade
@@ -63,8 +63,7 @@ block append content
 								.right.mar-top-20m
 									.comments
 										a(href="#") 51
-									.views
-										a(href="#") 225
+									.views 225
 				+item("Название")
 				+item("Состояние науки российской федерации")
 		//------------------------------------------------
