--- a/source/jade/story-item.jade
+++ b/source/jade/story-item.jade
@@ -92,8 +92,7 @@ block append content
 								.imeta
 									.comments
 										a(href="#") 51
-									.views
-										a(href="#") 225
+									.views 225
 						.items-right
 							.item
 								.idate 30 Сентября
@@ -102,8 +101,7 @@ block append content
 								.imeta
 									.comments
 										a(href="#") 51
-									.views
-										a(href="#") 225
+									.views 225
 							.item
 								.idate 30 Сентября
 								.iname 
@@ -111,8 +109,7 @@ block append content
 								.imeta
 									.comments
 										a(href="#") 51
-									.views
-										a(href="#") 225
+									.views 225
 							.item
 								.idate 30 Сентября
 								.iname 
@@ -120,8 +117,7 @@ block append content
 								.imeta
 									.comments
 										a(href="#") 51
-									.views
-										a(href="#") 225
+									.views 225
 				+comment-block
 		//------------------------------------------------
 		.main-right
@@ -173,8 +169,7 @@ block append content
 							.imeta
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 					.item
 						.iprev
 							a(href="#") 
@@ -186,8 +181,7 @@ block append content
 							.imeta
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 					.item
 						.iprev
 							a(href="#") 
@@ -199,8 +193,7 @@ block append content
 							.imeta
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 					.item
 						.iprev
 							a(href="#") 
@@ -212,8 +205,7 @@ block append content
 							.imeta
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 			//------------------------------------------------
 			.box-support
 				.bcon
