--- a/source/jade/disscus.jade
+++ b/source/jade/disscus.jade
@@ -60,8 +60,7 @@ block append content
 							.right
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 				.item-cloud-talks
 					.iprev
 						.person
@@ -99,8 +98,7 @@ block append content
 							.right
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 				.item-cloud-talks
 					.iprev
 						.person
@@ -140,8 +138,7 @@ block append content
 							.right
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 				.item-cloud-talks
 					.iprev
 						.person
@@ -179,8 +176,7 @@ block append content
 							.right
 								.comments
 									a(href="#") 51
-								.views
-									a(href="#") 225
+								.views 225
 		//------------------------------------------------
 		.main-right
 			.box-talks-2.box-right
