--- a/source/jade/edit-interface.jade
+++ b/source/jade/edit-interface.jade
@@ -61,12 +61,11 @@ block append content
 										img(src="img/content/edit-page/1.png", alt="")
 									.articles__item-info
 										.articles__item-date-added Добавлен: 13 октября 2012
-										.articles__item-title #{name}
-										.imeta.articles__item-stats
+										.articles__item-title.mar-bot-10 #{name}
+										.bmeta
 											.comments
 												a(href='#') 51
-											.views
-												a(href='#') 225
+											.views 225
 									ul.articles__item-controls.inline
 										li.articles__item-controls-edit.js-edit-link
 										li.articles__item-controls-delete
