--- a/source/jade/tables.jade
+++ b/source/jade/tables.jade
@@ -38,7 +38,7 @@ block append content
 				.kir
 					.kir__col.kir__col_wide 
 					.kir__col.kir__col_med 
-						.kir__name Внутренний рынок 
+						.kir__name Гоз
 					.kir__col.kir__col_med
 						.kir__name Внешний рынок
 				.kir
@@ -49,3 +49,7 @@ block append content
 					.kir__col.kir__col_wide Американские доллары, млн руб.
 					.kir__col.kir__col_med: input(type="text", placeholder="173 000").inp_kir
 					.kir__col.kir__col_med: input(type="text", placeholder="173 000").inp_kir.inp_orange
+			
+			.mar-top-20.center
+				a(href="#").btn-grey-wide.inline Отмена
+				a(href="#").btn-orange-wide.inline Сохранить
