--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -4475,6 +4475,8 @@ a.sort-link.lines.is-active
 	font-size 14px
 .kir__col_wide
 	width 250px
+.kir__col_med
+	text-align center
 .kir__name 
 	color #333
 	font-size 16px
