--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -4487,7 +4487,7 @@ input.inp_kir
 	margin-bottom 0
 	font-size 18px
 	text-align center
-	&:hover
+	&:hover, &:focus
 		box-shadow 0 1px 11px rgba(1, 1, 1, 0.1)
 
 input.inp_full
