--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -4461,10 +4461,12 @@ a.sort-link.lines.is-active
 		opacity .9
 	
 
-.kir
+.kir-table
 	display table
 	table-layout fixed
-	width 600px
+	min-width 600px
+.kir
+	display table-row
 .kir__col
 	position relative
 	display table-cell
@@ -4477,6 +4479,8 @@ a.sort-link.lines.is-active
 	width 250px
 .kir__col_med
 	text-align center
+	width 200px
+	vertical-align top
 .kir__name 
 	color #333
 	font-size 16px
@@ -4496,3 +4500,4 @@ input.inp_full
 input.inp_orange
 	background #ffe9db
 	border 1px solid #ff9350
+	cursor default
