--- a/source/jade/search.jade
+++ b/source/jade/search.jade
@@ -33,6 +33,9 @@ block append content
 						label(for="any-words") Любое из слов
 				.form-filter-2
 					h4 В разделах <a href="#">(4)</a>
+					.mar-bot-20
+						input(id="select-all" type="checkbox" name="radio")
+						label(for="select-all") Выбрать все разделы
 					.col
 						input(id="analytic-article" type="checkbox" name="radio")
 						label(for="analytic-article") Аналитические статьи
